.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-${APP_GROUP}
  labels:
    app: ${APP_NAME}-${APP_GROUP}
    role: backend
    env: dev
  annotations:
    downscaler/uptime: Mon-Fri 07:30-23:30 America/Bahia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}-${APP_GROUP}
      role: backend
      env: dev
  template:
    metadata:
      labels:
        app: ${APP_NAME}-${APP_GROUP}
        role: backend
        env: dev
    spec:
      nodeSelector:
        preemptible: "true"
      tolerations:
      - effect: NoSchedule
        key: type
        operator: Equal
        value: preemptible
      imagePullSecrets:
      - name: gitlab-auth
      containers:
      - name: ${APP_NAME}-${APP_GROUP}
        image: ${IMAGE_TAG}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 120
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 130
          timeoutSeconds: 10
          failureThreshold: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-${APP_GROUP}-db
  labels:
    app: ${APP_NAME}-${APP_GROUP}-db
    role: backend
    env: dev
  annotations:
    downscaler/uptime: Mon-Fri 07:30-23:30 America/Bahia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}-${APP_GROUP}-db
      role: backend
      env: dev
  template:
    metadata:
      labels:
        app: ${APP_NAME}-${APP_GROUP}-db
        role: backend
        env: dev
    spec:
      nodeSelector:
        preemptible: "true"
      tolerations:
      - effect: NoSchedule
        key: type
        operator: Equal
        value: preemptible
      containers:
      - name: ${APP_NAME}-${APP_GROUP}-db
        image: mcr.microsoft.com/mssql/server:2017-latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: "/var/opt/mssql"
          name: ${APP_NAME}-${APP_GROUP}-storage
        ports:
        - containerPort: 1433
        resources:
          requests:
            memory: "500Mi"
            cpu: "100m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
      volumes:
        - name: ${APP_NAME}-${APP_GROUP}-storage
          persistentVolumeClaim:
            claimName: ${APP_NAME}-${APP_GROUP}-pvc
