.k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ${APP_NAME}-${APP_GROUP}
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: ${APP_NAME}-${APP_GROUP}
    role: backend
---
kind: Service
apiVersion: v1
metadata:
  name: ${APP_NAME}-${APP_GROUP}-DB
spec:
  type: ClusterIP
  ports:
  - name: tcp
    port: 1433
    targetPort: 1433
    protocol: TCP
  selector:
    app: ${APP_NAME}-${APP_GROUP}-DB
    role: backend
